# kimun

./: .gitignore  .impeccable.md  CLAUDE.md  CONTEXT.md  Cargo.toml  Dioxus.toml  LICENSE  README.md  ask-workspace-plan.md  bundle.sh  bundle_mac.sh  core-architecture-map.html  editor_architecture.html  install-server.sh  install.sh  package-lock.json  rag-build-plan.md  release-plz.toml  release.sh  semtag  serve.sh  tailwind.config.js  test_config.toml  test_config.toml.corrupt
client/: CHANGELOG.md  Cargo.toml
client/src/: dto.rs  lib.rs  observer.rs  reconcile.rs  sync.rs
core/: CHANGELOG.md  Cargo.toml  README.md
core/benches/: indexing.rs
core/benches/fixtures/: code_heavy.md  hashtag_heavy.md  medium_note.md  small_note.md
core/src/: content_data.rs  error.rs  lib.rs  link_rewrite.rs  note.rs  search_terms.rs  utilities.rs
core/src/db/: mod.rs  search_terms.rs
core/src/index/: mod.rs  search_terms.rs
core/src/nfs/: backup.rs  filename.rs  mod.rs  saved_searches.rs  vault_id.rs  vault_path.rs  visitor.rs
core/src/note/: content_data.rs  content_extractor.rs  content_extractor.rs.bkp  mod.rs
core/src/sync/: mod.rs  visitor.rs
core/testdata/: README.md
core_notes/: Cargo.toml
core_notes/src/: error.rs  lib.rs  parser.rs
core_notes/src/db/: mod.rs
core_notes/src/nfs/: mod.rs
desktop/: Cargo.toml  Dioxus.toml
desktop/assets/scripts/: markdown.js  md_shortcuts.js
desktop/assets/styling/: fontello.css  fonts.css  gruvbox.css  gruvbox_dark.css  gruvbox_light.css  icons.css  light.css  main copy.css  main.css  markdown.css  theme.css
desktop/icons/: README.md  create_icns.sh  create_icns_png.sh  kimun.icns
desktop/src/: app_state.rs  editor_state.rs  fonts.rs  global_events.rs  helpers.rs  icons.rs  lib.rs  main.rs  no_note.rs  no_note_view.rs  route.rs  settings.rs  state.rs  style_units.rs
desktop/src/components/: button.rs  filtered_list.rs  focus_manager.rs  hero.rs  list.rs  mod.rs  note_browse_entry.rs  note_browser.rs  note_select_entry.rs  preview.rs  preview_pane.rs  search_box.rs  text_editor.rs
desktop/src/editor/: data.rs  editor_view.rs  highlighter.rs  mod.rs  note_browser.rs  parser.rs  preview.rs  preview.rs.old  rendered_view.rs  save_manager.rs  text_editor.rs
desktop/src/filtered_list/: mod.rs  row.rs  selector.rs
desktop/src/fonts/: mod.rs
desktop/src/icons/: mod.rs
desktop/src/modals/: mod.rs  note_select.rs  vault_browse.rs  vault_browser.rs  vault_indexer.rs
desktop/src/pages/: editor.rs  main.rs  mod.rs  settings.rs  start.rs
desktop/src/settings/: config_dir.rs  mod.rs  page.rs  theme.rs  view.rs
desktop/src/themes/: mod.rs
desktop/src/utils/: keys.rs  mod.rs  sparse_vector.rs  use_on_window.rs
desktop/themes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  default.toml
desktop_dioxus/: Cargo.toml  Dioxus.toml  serve.sh
desktop_dioxus/assets/: main.css
desktop_dioxus/src/: lib.rs  main.rs  settings.rs
desktop_dioxus/src/editor/: note_browser.rs  text_editor.rs
desktop_dioxus/src/ignore_bin/: app.rs
desktop_dioxus/src/modal/: mod.rs
desktop_egui/: Cargo.toml
desktop_egui/src/: lib.rs  no_note_view.rs  settings.rs
desktop_egui/src/editor/: data.rs  mod.rs
desktop_egui/src/filtered_list/: mod.rs  row.rs
desktop_egui/src/fonts/: icons.rs  mod.rs
desktop_egui/src/icons/: mod.rs
desktop_egui/src/modals/: mod.rs
desktop_egui/src/settings/: mod.rs  view.rs
desktop_iced/: Cargo.toml
desktop_iced/src/: lib.rs  preview.rs
desktop_iced/src/components/: linear_progress.rs
desktop_iced/src/editor/: mod.rs  note_browser.rs  text_input.rs
desktop_iced/src/filtered_list/: mod.rs  row.rs
desktop_iced/src/modals/: vault_indexer.rs
desktop_iced/src/settings/: mod.rs  page.rs
iced/: Cargo.toml
iced/src/: icons.rs  main.rs
iced/src/components/: filtered_list.rs  mod.rs
iced/src/editor/: mod.rs
iced/src/modals/: mod.rs  vault_browse.rs  vault_indexer.rs
iced/src/settings/: mod.rs  page.rs
rag/: .gitignore  CHUNKING_EXAMPLE.md  Cargo.toml  README.md  VECTOR_DATABASES.md  config.example.toml
rag/bruno/: Check a Job.yml
rag/src/: auth.rs  config.rs  db.rs  document.rs  handlers.rs  lib.rs  main.rs  reranker.rs  server_state.rs  webui.rs
rag/src/dbembeddings/: mod.rs  veclance.rs  veclancedb.rs  vecqdrant.rs  vecsqlite.rs
rag/src/embedder/: fastembedder.rs  mod.rs
rag/src/embeddings/: mod.rs  vecsqlite.rs
rag/src/llmclients/: claude.rs  gemini.rs  mistral.rs  mod.rs  openai.rs
server/: .gitignore  CHANGELOG.md  CHUNKING_EXAMPLE.md  Cargo.toml  README.md  config.example.toml
server/bruno/: Ask a question.yml  Health.yml  Index All.yml  opencollection.yml
server/docker/: Dockerfile  entrypoint.sh  server.toml.default
server/src/: auth.rs  config.rs  document.rs  handlers.rs  lib.rs  logbuffer.rs  reranker.rs  server_state.rs  webui.rs
server/src/auth/: mod.rs  session.rs
server/src/dbembeddings/: mod.rs  veclance.rs  vecqdrant.rs  vecsqlite.rs
server/src/llmclients/: mod.rs
server/src/reranker/: http.rs  mod.rs
server/src/webui/: assets.rs  config.rs  login.rs  mod.rs  pages.rs  shell.rs
tui/: .gitignore  CHANGELOG.md  Cargo.toml  kimun_config.toml  kimun_config.toml.corrupt  reindex-test.kimuncache  test-workspace.kimuncache  work.kimuncache
tui/.claude/: settings.json
tui/benches/: editor_parse.rs
tui/docs/: cli-phase-1-status.md  cli-phase-2-usage.md  cli-testing.md
tui/src/: app.rs  event_handler.rs  lib.rs  main.rs  rag.rs  test_support.rs  ui.rs
tui/src/app_screen/: ask.rs  browse.rs  doc_meta.rs  editor.rs  editor_input.rs  mod.rs  onboarding.rs  (+5 more)
tui/tests/: cli_integration_test.rs  cli_phase2_integration_test.rs  config_migration_test.rs  editor_render_snapshots.rs  history_file_test.rs  incremental_property.proptest-regressions  incremental_property.rs  json_integration_test.rs  json_output_test.rs  labels_command_test.rs  mcp_smoke.rs  metadata_extraction_test.rs  note_commands_test.rs  note_path_resolution_test.rs  workspace_commands_test.rs  workspace_config_test.rs
(+554 files in other folders)
