[package]
name = "noters"
version = "0.1.0"
authors = ["Nico Hormazábal <mail@nico2sh.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# freya = "0.2"
# freya = { git = "https://github.com/marc2332/freya.git" }
# freya-hooks = "0.2"
dioxus = { version = "0.5", features = ["desktop"] }
dioxus-sdk = { version = "0.5", features = [] }
dioxus-radio = { version = "0.2.4" }
dioxus-desktop = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Debug
log = "0.4"
env_logger = "0.11"
# Error Handling
thiserror = "2.0"
anyhow = "1.0"

rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
ignore = "0.4.23"
gxhash = "3.4.1"

regex = "1.11"
# Where the home dir is
dirs = "5.0"
# Fuzzy search
nucleo = "0.5"
manganis = "0.2.2"
# manganis = "0.2"
