[workspace]
members = ["core", "tui", "client", "rag"]
resolver = "2"

[profile.release]
opt-level = "z"   # optimise for size (smaller than "s", smaller than 3)
lto = true        # cross-crate dead-code elimination
codegen-units = 1 # single CGU lets LLVM inline across the whole crate
strip = true      # strip debug symbols from the final binary
panic = "abort"   # drop unwinding machinery (~10 % size reduction)

[workspace.dependencies]
# NOTE: kimun_core is intentionally NOT pinned here. release-plz rewrites this
# version on every core release; when the pin lives in [workspace.dependencies],
# that rewrite is attributed to core (which inherits serde/toml/log from this
# table), retriggering an endless "update Cargo.toml dependencies" patch loop.
# The pin lives on tui's dependency instead. See tui/Cargo.toml.
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
log = "0.4"
tokio = { version = "1.52.3", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.13"
