[package]
name = "kimun_rag_client"
version = "0.1.0"
edition = "2024"

[dependencies]
kimun_core = { path = "../core" }
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
log = { workspace = true }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3"
