[package]
name = "kimun_server_client"
version = "0.1.0"
edition = "2024"
description = "Client for the Kimün RAG server — capability probing, note sync, and hash-diff reconciliation"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/nico2sh/kimun"

[dependencies]
kimun_core = { path = "../core", version = "0.2.28" }
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
log = { workspace = true }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3"
