[package]
name = "kimun_core"
version = "0.1.0"
authors = ["Nico Hormazábal <mail@nico2sh.com>"]
edition = "2021"

[dependencies]
##############
# Core Notes #
##############
## Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
## Debug
log = "0.4"
env_logger = "0.11"
## Error Handling
thiserror = "2.0"
## DB Stuff
rusqlite = { version = "0.37", features = ["bundled"] }
## Browse files
ignore = "0.4"
## Hash function
twox-hash = "2.1"
## Regular Expressions
regex = "1.12"
# Markdown parsing
pulldown-cmark = "0.13"
chrono = "0.4"
crossbeam-channel = "0.5"
futures-channel = "0.3"
futures-util = "0.3"
## Async stuff
# tokio = { version = "1.42", features = ["full"] }
# crossbeam-channel = "0.5"
# futures = "0.3"

[dev-dependencies]
tempfile = "3.23"
serde_json = "1.0"
