[package]
name = "kimun_core"
version = "0.2.6"
authors = ["Nico Hormazábal <mail@nico2sh.com>"]
edition = "2021"
description = "Core library for the Kimün notes application"
license = "MIT"
repository = "https://github.com/nico2sh/kimun"
readme = "README.md"

[dependencies]
##############
# Core Notes #
##############
## Serialization
serde = { workspace = true }
toml = { workspace = true }
## Debug
log = { workspace = true }
env_logger = "0.11"
## Error Handling
thiserror = "2.0"
## DB Stuff
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
## Browse files
ignore = "0.4"
## Hash function
twox-hash = "2.1"
## Regular Expressions
regex = "1.12"
# Markdown parsing
pulldown-cmark = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = "0.5"
futures-channel = "0.3"
futures-util = "0.3"
## Async stuff
tokio = { workspace = true }
async-recursion = "1.1"

[dev-dependencies]
tempfile = "3.23"
serde_json = "1.0"
