[package]
name = "core_notes"
version = "0.1.0"
authors = ["Nico Hormazábal <mail@nico2sh.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Debug
log = "0.4"
env_logger = "0.11"
# Error Handling
thiserror = "2.0"
anyhow = "1.0"

rusqlite = { version = "0.32", features = ["bundled"] }
ignore = "0.4.23"
gxhash = "3.4.1"

regex = "1.11"
# Where the home dir is
dirs = "5.0"
# Fuzzy search
markdown = "1.0.0-alpha.21"
