[package]
name = "kimun_desktop"
version = "0.1.0"
authors = ["Nico Hormazábal <mail@nico2sh.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kimun_core = { path = "../core" }
dioxus = { version = "0.6.3", features = ["router"] }
dioxus-radio = "0.6.0"
anyhow = "1.0.98"

## Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.4"

dirs = "6.0"
nucleo = "0.5"
rfd = "0.15.4"

tokio = { version = "1.47.0", features = ["full"] }
futures = "0.3.31"

chrono = "0.4"

[features]
bundle = []
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
