[package]
name = "kimun"
version = "0.1.0"
authors = ["Nico Hormazábal <mail@nico2sh.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kimun_core = { path = "../core" }
dioxus = { version = "0.6.3", features = ["router"] }
dioxus-query = "0.8.1"
dioxus-radio = "0.6.0"
anyhow = "1.0.98"

## Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.5"

dirs = "6.0"
nucleo = "0.5"
rfd = "0.15.4"

tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"

chrono = "0.4"
pulldown-cmark = "0.13.0"
syntect = "5.2.0"
lazy_static = "1.5.0"

[features]
bundle = []
default = ["desktop"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
