[package]
name = "desktop_notes"
version = "0.1.0"
authors = ["Nico Hormazábal <mail@nico2sh.com>"]
edition = "2021"

[dependencies]
core_notes = { path = "../core_notes" }

dioxus = { version = "0.6", features = ["desktop"] }
dioxus-sdk = { version = "0.6", features = [] }
dioxus-desktop = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Debug
log = "0.4"
env_logger = "0.11"
# Error Handling
anyhow = "1.0"

rfd = "0.15"

regex = "1.11"
# Where the home dir is
dirs = "5.0"
# Fuzzy search
nucleo = "0.5"

# Markdown text
pulldown-cmark = "0.12"
smol = "2.0.2"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
