[package]
name = "noters"
version = "0.1.0"
edition = "2021"

[dependencies]
core_notes = { path = "../core_notes" }

iced = { version = "0.13", features = [
  "advanced",
  "debug",
  "highlighter",
  "lazy",
] }
iced_aw = { version = "0.11.0", default-features = false, features = [
  "selection_list",
] }
rfd = "0.15"

thiserror = "2.0"
anyhow = "1.0"

regex = "1.11"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
nucleo = "0.5"

log = "0.4"
env_logger = "0.11"
