[package]
name = "kimun_desktop"
authors = ["Nico Hormazabal"]
description = "A note taking app focused on simplicity and searchability"
readme = "../README.md"
repository = "https://github.com/nico2sh/notes"
version = "0.1.0"
edition = "2024"

[dependencies]
kimun_core = { path = "../core" }

iced = { version = "0.13", features = [
  "advanced",
  "debug",
  "highlighter",
  "markdown",
  "image",
  "smol",
] }
rfd = "0.15"

anyhow = "1.0"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
nucleo = "0.5"

log = "0.4"
open = "5.3"
env_logger = "0.11"
rayon = "1.10.0"
