[package]
name = "kimun_rag"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rag-server"
path = "src/bin/rag-server.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
fastembed = "5.8.1"
# kimun_core = { path = "../core" }
reqwest = { version = "0.13.1", features = ["json"] }
rusqlite = { version = "0.37", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

# Server dependencies
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
toml = "0.9.8"
dirs = "6.0.0"
sha2 = "0.10"
qdrant-client = "1.12"
