[package]
name = "kimun_rag"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rag-server"
path = "src/bin/rag-server.rs"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1"
chrono = "0.4.43"
clap = { version = "4.5.58", features = ["derive"] }
fastembed = "5.9.0"
# kimun_core = { path = "../core" }
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = { version = "0.38", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = "0.8.39"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
env_logger = "0.11.9"

# Server dependencies
axum = "0.8"
tower = "0.5.3"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
toml = "0.9.8"
dirs = "6.0.0"
sha2 = "0.10"
qdrant-client = "1.12"
arrow-array = "57.3"

# LanceDB - Currently disabled due to dependency issue
# Issue: lance-index v2.0.0 uses tempfile::TempDir::keep() which was removed in tempfile 3.19+
# Status: Waiting for LanceDB to update to lance v3.0.0+ which fixes this issue
# Workaround: Use Qdrant as your vector database (recommended)
lancedb = "0.26.2"
