[package]
name = "kimun"
version = "0.1.0"
edition = "2024"
description = "A terminal-based notes application"
license = "MIT"

[[bin]]
name = "kimun"
path = "src/main.rs"

[profile.release]
opt-level = "z"   # optimise for size (smaller than "s", smaller than 3)
lto = true        # cross-crate dead-code elimination
codegen-units = 1 # single CGU lets LLVM inline across the whole crate
strip = true      # strip debug symbols from the final binary
panic = "abort"   # drop unwinding machinery (~10 % size reduction)

[dependencies]
kimun_core = { path = "../core", version = "0.1.0" }

clap = { version = "4", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = { version = "0.30.0", features = ["serde"] }
serde = "1.0.228"
toml = "1.0.7"
itertools = "0.14.0"
log = "0.4.29"
simplelog = "0.12"
tokio = { version = "1.50.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
ratatui-textarea = { version = "0.8.0", features = ["search"] }
nucleo = "0.5"
throbber-widgets-tui = "0.11"
chrono = "0.4"
pulldown-cmark = "0.13"
