[package]
name = "kimun-notes"
version = "0.5.0"
edition = "2024"
description = "A terminal-based notes application"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/nico2sh/kimun"

[[bin]]
name = "kimun"
path = "src/main.rs"

[lib]
name = "kimun_notes"
path = "src/lib.rs"

[dependencies]
kimun_core = { workspace = true }

clap = { version = "4", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = { version = "0.30.0", features = ["serde"] }
rmcp = { version = "1.3", features = ["server", "transport-io"] }
serde = { workspace = true }
toml = { workspace = true }
itertools = "0.14.0"
log = { workspace = true }
simplelog = "0.12"
tokio = { workspace = true }
async-trait = "0.1"
futures = "0.3"
ratatui-textarea = { version = "0.8.0", features = ["search"] }
nucleo = "0.5"
throbber-widgets-tui = "0.11"
chrono = { workspace = true }
pulldown-cmark = { workspace = true }
serde_json = "1.0"
regex = "1"
open = "5"
arboard = "3"
nvim-rs = { version = "0.9", features = ["use_tokio"] }
tokio-util = { version = "0.7", features = ["compat"] }
rmpv = "1"
unicode-width = "0.2"
unicode-segmentation = "1"

[dev-dependencies]
tempfile = "3"
